更新: [class Log]修复后台日志文件报错线程异常, 增加单一日志文件设置选项, 删除输出流的使用方法; [class Time]sleep_s/wait_s模板接参数(sec/ms/min/hour/day...); 添加[class JsonManage]Json的简单处理; 简单整理 Win32API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,17 @@
 cmake_minimum_required(VERSION 3.10)
 project(libTypical_Tool)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # 查找源文件和头文件
 file(GLOB_RECURSE SRC_Tool_LIST "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 file(GLOB_RECURSE HEADER_Tool_LIST "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
+file(GLOB_RECURSE Json_libHEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/Json/*.h")
 
 # 包含头文件目录
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/Json)
 
 # 设置自定义配置类型: 多配置生成器(Visual Studio, Xcode)
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Debug_Win;Release_Win" CACHE STRING "" FORCE)
@@ -25,6 +30,14 @@ endforeach()
 
 # 创建静态库
 add_library(libTypical_Tool STATIC ${SRC_Tool_LIST} ${HEADER_Tool_LIST})
+
+# 使用设置链接库
+target_link_libraries(libTypical_Tool
+    $<$<CONFIG:Debug>:${CMAKE_CURRENT_SOURCE_DIR}/lib/Json/Debug/jsoncpp_static.lib>
+    $<$<CONFIG:Debug_Win>:${CMAKE_CURRENT_SOURCE_DIR}/lib/Json/Debug/jsoncpp_static.lib>
+    $<$<CONFIG:Release>:${CMAKE_CURRENT_SOURCE_DIR}/lib/Json/Release/jsoncpp_static.lib>
+    $<$<CONFIG:Release_Win>:${CMAKE_CURRENT_SOURCE_DIR}/lib/Json/Release/jsoncpp_static.lib>
+)
 
 # 设置不同配置的编译定义
 target_compile_definitions(libTypical_Tool
@@ -54,5 +67,6 @@ if (MSVC)
 endif()
 
 # 分组源文件和头文件
-source_group("Header Files" FILES ${HEADER_Tool_LIST})
-source_group("Source Files" FILES ${SRC_Tool_LIST})
+source_group("HeaderFiles" FILES ${HEADER_Tool_LIST})
+source_group("SourceFiles" FILES ${SRC_Tool_LIST})
+source_group("Json_libHeaderFiles" FILES ${Json_libHEADER_FILES})
